--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNoBA+mzqYZtPWinUXmF67M",
+      "authorship_tag": "ABX9TyMeuKBS2BHOVU19RfiHok3t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,9 +45,9 @@
     {
       "cell_type": "code",
       "source": [
-        "num1=float(input(\"Ingresa un numero entero: \"))\n",
-        "num2=float(input(\"Ingresa un segundo numero entero: \"))\n",
-        "num3=float(input(\"Ingresa un tercer numero entero: \"))\n",
+        "num1=int(input(\"Ingresa un numero entero: \"))\n",
+        "num2=int(input(\"Ingresa un segundo numero entero: \"))\n",
+        "num3=int(input(\"Ingresa un tercer numero entero: \"))\n",
         "\n",
         "mayor=max(num1, num2, num3)\n",
         "\n",
@@ -58,18 +58,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I9tudX_T_Ex-",
-        "outputId": "dde3bceb-2583-45c9-a3a0-a31054b84639"
+        "outputId": "4d355124-e327-4659-ec5b-28e53d237f0a"
       },
-      "execution_count": 1,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Ingresa un numero5\n",
-            "Ingresa un segundo numero6\n",
-            "Ingresa un tercer numero4\n",
-            "El numero mayor de los tres es:  6.0\n"
+            "Ingresa un numero entero: 6\n",
+            "Ingresa un segundo numero entero: 10\n",
+            "Ingresa un tercer numero entero: 20\n",
+            "El numero mayor de los tres es:  20\n"
           ]
         }
       ]
